--- a/api/package.json
+++ b/api/package.json
@@ -28,7 +28,7 @@
   },
   "homepage": "https://github.com/benticarlos/wunjo-social-media#readme",
   "dependencies": {
-    "bcrypt-nodejs": "^0.0.3",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jwt-simple": "^0.5.6",
